Add payment component

--- a/src/app/cost/cost.component.html
+++ b/src/app/cost/cost.component.html
@@ -95,7 +95,7 @@
           class="ui labeled primary icon button mini"
           (click)="addCategory()"
         >
-          <i class="money bill alternate icon"></i>
+          <i class="shopping cart icon"></i>
           Add category
         </button>
       </td>
