Create summary componennt

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="ui fluid marg-top-50 marg-left-50">
   <app-cost></app-cost>
   <app-payment></app-payment>
+  <app-summary></app-summary>
 </div>
