--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
   <app-cost></app-cost>
   <app-payment></app-payment>
   <app-summary></app-summary>
+  <app-transactions></app-transactions>
 </div>
