Added clear and load

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <div class="ui fluid marg-top-50 marg-left-50">
+  <div class="marg-bottom-30">
+    <button class="ui labeled icon negative button" (click)="clearData()">
+      <i class="warning sign icon"></i>
+      Clear data
+    </button>
+  </div>
   <app-cost></app-cost>
   <app-payment></app-payment>
   <app-summary></app-summary>
