--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -1,4 +1,4 @@
-@each $dimen in (3 5 8 10 20 30 40 50 60 70 80 90 100) {
+@each $dimen in (3 5 8 10 20 30 40 50 60 70 80 90 100 150 200) {
   @each $side in (top right bottom left) {
     .marg-#{$side}-#{$dimen} {
       margin-#{$side}: #{$dimen}px;
@@ -14,15 +14,15 @@
   }
 
   .min-height-#{$dimen} {
-    min-width: #{$dimen}px;
+    min-height: #{$dimen}px;
   }
 
   .max-height-#{$dimen} {
-    min-width: #{$dimen}px;
+    max-height: #{$dimen}px;
   }
 
   .max-width-#{$dimen} {
-    min-width: #{$dimen}px;
+    max-width: #{$dimen}px;
   }
 
   .marg-horiz-#{$dimen} {
