--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -20,7 +20,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let transaction of (transactions$ | async)">
+      <tr *ngFor="let transaction of transactions">
         <td>{{ transaction.from }}</td>
         <td>{{ transaction.to }}</td>
         <td>{{ transaction.amount | currency }}</td>
