--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let summary of (summaries$ | async)">
+      <tr *ngFor="let summary of summaries">
         <td>{{ summary.person }}</td>
         <td>{{ summary.paid | currency }}</td>
         <td>{{ summary.received | currency }}</td>
